deploy/base/openehr-nodes/mumc/openehrtool/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mumc-openehrtool
  namespace: dh-health
  labels:
    app: mumc-openehrtool
    ehr-node-name: mumc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mumc-openehrtool
  template:
    metadata:
      labels:
        app: mumc-openehrtool
    spec:
      containers:
      - name: mumc-openehrtool
        image: surfercrs4/openehrtool:latest
        ports:
        - containerPort: 9000
