deploy/base/openehr-nodes/mumc/openehrtool/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mumc-openehrtool
spec:
  selector:
    app: mumc-openehrtool
  ports:
  - port: 9000
    targetPort: 9000
    name: http
  type: ClusterIP
